[UI] Fixed logout button